--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!--For Webclient testing use the okhttp3 dependency-->
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>mockwebserver</artifactId>
+      <version>4.3.1</version>
+    </dependency>
+
   </dependencies>
 
   <dependencyManagement>
