Added code for reactive couchbase implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-server.port = 9000
-name = USER
-
+server.port=9000
+name=USER
 #################WEB_CLIENT_CONFIG############################
-base.url = http://www.mocky.io
+base.url=http://www.mocky.io
+#################Couchbase configurations#################
+#spring.couchbase.bootstrap-hosts=localhost
+#spring.couchbase.bucket.name=user-sample
+#spring.couchbase.bucket.password=
+#couchbase UI user:Administrator pwd:password
+reactive.couchbase.bootstrap-hosts=localhost
+reactive.couchbase.bucket.username=Administrator
+reactive.couchbase.bucket.password=password
+reactive.couchbase.bucket.name=user-sample
